# Almacen-de-Viveres-Faa

./: package-lock.json  package.json
src/: App.svelte  main.ts  router.ts  stores.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_state.rs  main.rs
src-tauri/src/commands/: auth_commands.rs  inventory_commands.rs  mod.rs
src-tauri/src/core/: error.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs
src-tauri/src/models/: inventory.rs  mod.rs
src/components/: Layout.svelte
src/pages/: Contratos.svelte  InicioSesion.svelte  Salidas.svelte
src/routes/: +page.svelte
