# src-tauri/Cargo.toml (VERSIÓN FINAL Y COMPATIBLE)

[package]
name = "almacen-de-viveres-faa"
version = "0.1.0"
description = "Sistema de Almacén de Víveres (Arquitectura de Escritorio Nativa)"
authors = ["Jesus Langarica"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] } 

[dependencies]
# CORRECTO: Versión 1.5, alineada con tauri-build
tauri = { version = "1.5", features = [ "api-all", 
    "dialog", 
    "notification"] }
tokio = { version = "1.32.0", features = ["full"] }

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Base de Datos
rusqlite = { version = "0.29", features = ["bundled"] } 

# Utilidades
log = "0.4"
lazy_static = "1.4"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
